# ovis

./: configure.ac
docker/: Dockerfile
ldms/man/: ldmsd_sampler_discovery.man
ldms/python/: ldms.pxd  ldms.pyx
ldms/python/ldmsd/: ldmsd_communicator.py  ldmsd_controller
ldms/src/: Makefile.am
ldms/src/auth/: Makefile.am  ldms_auth_munge.c  ldms_auth_none.c
ldms/src/core/: Makefile.am  ldms.c  ldms.h  ldms_auth.c  ldms_private.h  ldms_rail.c  ldms_stream.c  ldms_xprt.c  rrbt.c
ldms/src/ldmsd/: Makefile.am  ldmsd.c  ldmsd.h  ldmsd_config.c  ldmsd_event.h  ldmsd_prdcr.c  ldmsd_request.c  ldmsd_request.h  ldmsd_request_util.c  ldmsd_stream.c  ldmsd_stream.h  ldmsd_strgp.c  ldmsd_updtr.c
ldms/src/ldmsd/test/: ldmsd_stream_publish.c
ldms/src/sampler/: Makefile.am
ldms/src/sampler/coretemp/: coretemp.c
ldms/src/sampler/examples/test_sampler/: test_sampler.c
ldms/src/sampler/json/: Plugin_json_stream_sampler.man  json_stream_sampler.c
ldms/src/sampler/loadavg/: loadavg.c
ldms/src/sampler/meminfo/: meminfo.c
ldms/src/sampler/netlink/: netlink-notifier.c
ldms/src/sampler/vmstat/: vmstat.c
ldms/src/standalone/: Makefile.am  README.txt
ldms/src/store/: store_sos.c
ldms/src/store/darshan/: darshan_stream_store.c
ldms/src/store/kokkos_appmon/: kokkos_appmon.c
ldms/src/store/stream_dump/: stream_dump.c
lib/src/ovis_util/: util.c
lib/src/zap/: Makefile.am  zap.c  zap_priv.h
lib/src/zap/fabric/: zap_fabric.c
lib/src/zap/rdma/: zap_rdma.c
lib/src/zap/sock/: Makefile.am  zap_sock.c
lib/src/zap/test/: Makefile.am
lib/src/zap/ugni/: zap_ugni.c
